--- a/Phugoid Oscillation.ipynb
+++ b/Phugoid Oscillation.ipynb
@@ -2,15 +2,110 @@
  "cells": [
   {
    "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "import numpy \n",
+    "from matplotlib import pyplot\n",
+    "%matplotlib inline\n",
+    "T = 100.0\n",
+    "dt = 0.02\n",
+    "N = int(T/dt)+1\n",
+    "t = numpy.linspace(0.0, T, N)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([  0.00000000e+00,   2.00000000e-02,   4.00000000e-02, ...,\n",
+       "         9.99600000e+01,   9.99800000e+01,   1.00000000e+02])"
+      ]
+     },
+     "execution_count": 2,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "t"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "import numpy\n",
+    "from matplotlib import pyplot\n",
+    "%matplotlib inline\n",
+    "T=100.0\n",
+    "dt=0.02\n",
+    "N=int(T/dt)+1\n",
+    "t=numpy.arange(0.0, T+dt, dt)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([  0.00000000e+00,   2.00000000e-02,   4.00000000e-02, ...,\n",
+       "         9.99600000e+01,   9.99800000e+01,   1.00000000e+02])"
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "t"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {
     "collapsed": true
    },
    "outputs": [],
-   "source": []
+   "source": [
+    "import numpy\n",
+    "from matplotlib import pyplot\n",
+    "%matplotlib inline\n",
+    "# initial conditions\n",
+    "z0=100. #altitude\n",
+    "b0=10. #upward velocity resulting from gust\n",
+    "zt=100.\n",
+    "g=9.81\n",
+    "\n",
+    "u=numpy.array([z0,b0])\n",
+    "# initialize an array to hold the changing elevation values\n",
+    "z=numpy.zeros(N)\n",
+    "z[0]=z0"
+   ]
   }
  ],
  "metadata": {
+  "anaconda-cloud": {},
   "kernelspec": {
    "display_name": "Python [default]",
    "language": "python",
