--- a/Phugoid Oscillation.ipynb
+++ b/Phugoid Oscillation.ipynb
@@ -190,6 +190,28 @@
     "collapsed": true
    },
    "outputs": [],
+   "source": [
+    "exit"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "clear"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
    "source": []
   }
  ],
