--- a/Rocket Assignment.ipynb
+++ b/Rocket Assignment.ipynb
@@ -7,7 +7,48 @@
     "collapsed": true
    },
    "outputs": [],
-   "source": []
+   "source": [
+    "from math import sin, cos, log, ceil\n",
+    "import numpy\n",
+    "from matplotlib import pyplot\n",
+    "%matplotlib inline\n",
+    "from matplotlib import rcParams\n",
+    "rcParams['font.family']='self'\n",
+    "rcParams['font.size']=16"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "h0=0\n",
+    "v0=0\n",
+    "vt=v0+a*dt\n",
+    "a=dv/dt\n",
+    "ms=50         #unit kg weight of the rocket shell\n",
+    "g = 9.81      # gravity in m s^{-2}\n",
+    "p=1.091       #average air density constant throughout flight in kg/m^3\n",
+    "A=pi*r^2      #maxium cross sectional area of the rocket \n",
+    "r=0.5\n",
+    "ve=325        #exhaust speed in m/s\n",
+    "Cd=0.15       #drag coefficient\n",
+    "mp0=100       #initial weight of the rocket propellant in kg"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "if "
+   ]
   }
  ],
  "metadata": {
