--- a/Rocket Assignment.ipynb
+++ b/Rocket Assignment.ipynb
@@ -25,10 +25,7 @@
    },
    "outputs": [],
    "source": [
-    "h0=0\n",
-    "v0=0\n",
-    "vt=v0+a*dt\n",
-    "a=dv/dt\n",
+    "# model parameters:\n",
     "ms=50         #unit kg weight of the rocket shell\n",
     "g = 9.81      # gravity in m s^{-2}\n",
     "p=1.091       #average air density constant throughout flight in kg/m^3\n",
@@ -47,7 +44,28 @@
    },
    "outputs": [],
    "source": [
-    "if "
+    "def get_mp(t, mp0):\n",
+    "    if (t>=5):\n",
+    "        return 0\n",
+    "    else return mp0-20*t\n",
+    "T=50                  #final time\n",
+    "dt=0.1                #time increment\n",
+    "N=int(T/dt)+1         #number of time-steps\n",
+    "#initialize the array containing the soluton for each time-step\n",
+    "u=numpy.empty((N, 2))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "def f(u):\n",
+    "    h=u[0]\n",
+    "    v=u[1]"
    ]
   }
  ],
