--- a/full phugoid model.ipynb
+++ b/full phugoid model.ipynb
@@ -213,7 +213,12 @@
     "collapsed": true
    },
    "outputs": [],
-   "source": []
+   "source": [
+    "def get_mp(t, mp0):\n",
+    "    if (t>=5):\n",
+    "        return 0\n",
+    "    else return mp0-20*t"
+   ]
   }
  ],
  "metadata": {
