--- a/Rocket assignment 1.2.ipynb
+++ b/Rocket assignment 1.2.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {
     "collapsed": true
    },
@@ -19,9 +19,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {
-    "collapsed": true
+    "collapsed": false
    },
    "outputs": [],
    "source": [
@@ -29,8 +29,8 @@
     "ms=50         #unit kg weight of the rocket shell\n",
     "g = 9.81      # gravity in m s^{-2}\n",
     "p=1.091       #average air density constant throughout flight in kg/m^3\n",
-    "A=pi*r^2      #maxium cross sectional area of the rocket \n",
     "r=0.5\n",
+    "A=numpy.pi*(r**2)      #maxium cross sectional area of the rocket \n",
     "ve=325        #exhaust speed in m/s\n",
     "Cd=0.15       #drag coefficient\n",
     "mp0=100       #initial weight of the rocket propellant in kg\n",
@@ -38,7 +38,8 @@
     "def get_mp(t, mp0):\n",
     "    if (t>=5):\n",
     "        return 0\n",
-    "    else return mp0-20*t\n",
+    "    else:\n",
+    "        return mp0-20*t\n",
     "#set initial conditions:\n",
     "v0=0    #start at stationary condition\n",
     "h0=0    #launch from the ground\n",
@@ -47,9 +48,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {
-    "collapsed": true
+    "collapsed": false
    },
    "outputs": [],
    "source": [
@@ -61,30 +62,7 @@
     "    return numpy.array([v, \n",
     "                        -g+mpc*ve/(ms+mp)-p*v*numpy.abs(v)*A*Cd/(2*(ms+mp)),\n",
     "                        -mpc, \n",
-    "                        1)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": [
-    "def euler_step(u, f, dt):\n",
-    "    return u+dt*f(u)\n",
-    "\n",
-    "T=50                  #final time\n",
-    "dt=0.1                #time increment\n",
-    "N=int(T/dt)+1         #number of time-steps\n",
-    "#initialize the array containing the soluton for each time-step\n",
-    "u=numpy.empty((N, 4))\n",
-    "u[0]=numpy.array([h0, v0, mp0, t0])   #fill 1st element with initial values\n",
-    "\n",
-    "#time loop- Euler method\n",
-    "for n in range(N-1):\n",
-    "    U[n]= euler_step(u[n], f, dt)"
+    "                        1])"
    ]
   },
   {
