--- a/rocket assignment 1.4.ipynb
+++ b/rocket assignment 1.4.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 41,
    "metadata": {
     "collapsed": false
    },
@@ -52,35 +52,139 @@
     "        u[n+1]= euler_step(u[n], f, dt)\n",
     "    else:\n",
     "        u[n+1]=[0,0,u[n,2]+dt]\n",
-    "        \n"
+    "        "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "At time t=3.2s, what is the mass (in kg) of rocket propellant remaining in the rocket? "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 51,
    "metadata": {
     "collapsed": false
    },
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "array([[  0.        ,   0.        ,   0.        ],\n",
-       "       [  0.        ,   3.35233333,   0.1       ],\n",
-       "       [  0.33523333,   6.76273724,   0.2       ],\n",
-       "       ..., \n",
-       "       [  0.        ,   0.        ,  98.8       ],\n",
-       "       [  0.        ,   0.        ,  98.9       ],\n",
-       "       [  0.        ,  -0.981     ,  99.        ]])"
-      ]
-     },
-     "execution_count": 10,
-     "metadata": {},
-     "output_type": "execute_result"
+     "ename": "SyntaxError",
+     "evalue": "invalid syntax (<ipython-input-51-786ba8686da4>, line 2)",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-51-786ba8686da4>\"\u001b[0;36m, line \u001b[0;32m2\u001b[0m\n\u001b[0;31m    print('mass of rocket propellant remaining in the rocket(kg):' mp)\u001b[0m\n\u001b[0m                                                                    ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m invalid syntax\n"
+     ]
     }
    ],
    "source": [
-    "u"
+    "mpl=mp0-mpc*3.2\n",
+    "print('mass of rocket propellant remaining in the rocket(kg):' mpl)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "What is the maximum speed of the rocket in? At what time does this occur? What is the altitude at this time? "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 42,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The max v is (m/s): 232.106133413\n",
+      "the time is (s): 5.0\n",
+      "the hight is (m): 523.522834292\n"
+     ]
+    }
+   ],
+   "source": [
+    "v_max = max(u[:,1])\n",
+    "print(\"The max v is (m/s):\", v_max)\n",
+    "for n in range(N-1):\n",
+    "    if (u[n,1] == v_max):\n",
+    "        h=u[n,0]\n",
+    "        t=n/10\n",
+    "        print (\"the time is (s):\",t)\n",
+    "        print ('the hight is (m):',h)\n",
+    "    else:\n",
+    "        continue"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "what is the rocket 's maximum altitude during the flight? at what time does this occur? '"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 43,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The max h is (m): 1334.18294543\n",
+      "the time is (s): 15.7\n"
+     ]
+    }
+   ],
+   "source": [
+    "h_max = max(u[:,0])\n",
+    "print(\"The max h is (m):\", h_max)\n",
+    "for n in range(N-1):\n",
+    "    if (u[n,0] ==h_max):\n",
+    "        t=n/10\n",
+    "        print (\"the time is (s):\",t)\n",
+    "   "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "At what time does the rocket impact the ground? What is the velocity of the rocket at time of impact?"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 50,
+   "metadata": {
+    "collapsed": false,
+    "scrolled": true
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "the time is (s): 37.1\n",
+      "the velocity is (m/s): -86.0068349838\n"
+     ]
+    }
+   ],
+   "source": [
+    "for n in range(N-1):\n",
+    "    if (u[n+2,0] ==0):\n",
+    "        t=n/10\n",
+    "        v=u[n,1]\n",
+    "        print (\"the time is (s):\",t)\n",
+    "        print ('the velocity is (m/s):', v)\n",
+    "        break"
    ]
   },
   {
