--- a/rocket assignment 1.4.ipynb
+++ b/rocket assignment 1.4.ipynb
@@ -64,23 +64,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 53,
    "metadata": {
     "collapsed": false
    },
    "outputs": [
     {
-     "ename": "SyntaxError",
-     "evalue": "invalid syntax (<ipython-input-51-786ba8686da4>, line 2)",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-51-786ba8686da4>\"\u001b[0;36m, line \u001b[0;32m2\u001b[0m\n\u001b[0;31m    print('mass of rocket propellant remaining in the rocket(kg):' mp)\u001b[0m\n\u001b[0m                                                                    ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m invalid syntax\n"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "mass of rocket propellant remaining in the rocket(kg): 36.0\n"
      ]
     }
    ],
    "source": [
-    "mpl=mp0-mpc*3.2\n",
-    "print('mass of rocket propellant remaining in the rocket(kg):' mpl)"
+    "mp=mp0-mpc*3.2\n",
+    "print('mass of rocket propellant remaining in the rocket(kg):', mp)"
    ]
   },
   {
