--- a/Space&Time2.ipynb
+++ b/Space&Time2.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": null,
    "metadata": {
     "collapsed": true
    },
@@ -18,63 +18,41 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": null,
    "metadata": {
     "collapsed": false
    },
    "outputs": [],
    "source": [
-    "#def linearconv(nx):\n",
-    " #   dx=2/(nx-1)\n",
-    "  #  nt=20\n",
-    "   # dt=.025\n",
-    " #   #c=1\n",
-    "  #  x=numpy.linspace(0,2,nx)\n",
-    "   # u=numpy.ones(nx)\n",
-    " #   lbound=numpy.where(x >= 0.5)\n",
-    "  #  ubound=numpy.where(x <=1)\n",
-    "   # u[numpy.intersect1d(lbound, ubound)]=2\n",
-    "   # un=numpy.ones(nx)\n",
+    "def linearconv(nx):\n",
+    "    dx=2/(nx-1)\n",
+    "    nt=20\n",
+    "    dt=.025\n",
+    "    c=1\n",
+    "    x=numpy.linspace(0,2,nx)\n",
+    "    u=numpy.ones(nx)\n",
+    "    lbound=numpy.where(x >= 0.5)\n",
+    "    ubound=numpy.where(x <=1)\n",
+    "    u[numpy.intersect1d(lbound, ubound)]=2\n",
+    "    un=numpy.ones(nx)\n",
     "\n",
-    "  #  for n in range(nt):\n",
-    "   #     un=u.copy()\n",
-    "   #     u[1:]=un[1:]-1*(un[1:]-un[0:-1])\n",
-    "    #    u[0]=1.0\n",
-    " #   pyplot.plot(x, u, color='#003366', ls=\"--\", lw=3)\n",
-    "  #  pyplot.ylim(0,2.5)"
+    "    for n in range(nt):\n",
+    "        un=u.copy()\n",
+    "        u[1:]=un[1:]-(c*dt/dx)*(un[1:]-un[0:-1])\n",
+    "        u[0]=1.0\n",
+    "    pyplot.plot(x, u, color='#003366', ls=\"--\", lw=3)\n",
+    "    pyplot.ylim(0,2.5)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": null,
    "metadata": {
     "collapsed": false
    },
    "outputs": [],
    "source": [
-    "#linearconv(41)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 36,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [
-    {
-     "data": {
-      "image/png": "iVBORw0KGgoAAAANSUhEUgAAAYcAAAELCAYAAAAybErdAAAABHNCSVQICAgIfAhkiAAAAAlwSFlz\nAAALEgAACxIB0t1+/AAAEcBJREFUeJzt3X+sZGV9x/H3Z3cpZFtIKOsaLPhjjRClLI0Qq7umvagQ\nK8WkqIEEqQW7oUX/qK1IrI0sIaKrIUZCEakEapo0VQMhGhFj1xsiNiSCdaHLaiyLJK6h/AiBZeXn\nfvvHzMIwz713Zu6dmbvuvl/J5Mx95nnOeebss/ez55znnE1VIUlSrxXL3QFJ0v7HcJAkNQwHSVLD\ncJAkNQwHSVLDcJAkNQwHSVJj1aAKSU4CPgK8HXgOWAn8J3B5VT0yoO0DwGO9RUABH6+qrYvssyRp\nwjLoJrgkO4B7gPOq6ukkRwNb6fyiP6mqnlmg7f1VtW6cHZYkTd4wp5X2Ap+oqqcBqurXwBeANwDv\nmWDfJEnLZOBpJWB9VT3fV7aLzpHDkePvkiRpuQ08cpgjGACOp3NEcfuA5kmyJckdSXYkuS3JmYvp\nqCRpekaerZRkBXAB8NWq+sWA6g8Bd1XVRuAE4BbgliQXjdxTSdLUDLwg3TRINgNnAH9SVb8ZeYPJ\nt+nMfFpbVc+O2l6SNHkjHTkkOR94P/DuxQRD153A4XSOJCRJ+6FhLkgDkOQ84GPAqVX16BD1DwNW\nVtVTfR+90F2uXKCt/8mEJI2oqjKudQ115JDkg8DFwDur6uFu2RlJNvXUWZukt2NnA1fOsbpTgGeA\n7Qtts6p8jeF16aWXLnsfDqSX+9P9ub++xm1gOCQ5F7gOuBE4Pcm53bIzgaO7dTbQmd56dV/zc5Kc\n3LOus4H3Aluqas9YvoEkaeyGOa10FXAonRvf+l3WXe4GHqcTEPvcChwDXJPkEDr3RDwGXFhV1y+6\nx5KkiRsYDlV11BB1tgFr+sr+D/hM96VlMjMzs9xdOKC4P8fL/bn/Gnkq6zQkqf2xX5K0v0pCTfuC\ntCTp4GI4SJIahoMkqWE4SJIahoMkqWE4SJIahoMkqWE4SJIahoMkqWE4SJIahoMkqWE4SJIahoMk\nqWE4SJIahoMkqWE4SJIahoMkqWE4SJIahoMkqWE4SJIahoMkqWE4SJIahoMkqWE4SJIahoMkqWE4\nSJIahoMkqWE4SJIahoMkqWE4SJIahoMkqTEwHJKclOS6JNuT/DTJvUm+lGTNEG1XJbk8yX1JtiX5\nYZKN4+m6JGlSUlULV0h2APcA51XV00mOBrYCAU6qqmcWaHstMANsqKrHknwYuAp4W1VtW6BdDeqX\nJOklSaiqjGt9w5xW2gt8oqqeBqiqXwNfAN4AvGe+RkmOAzYBn62qx7ptrwd2Ap9ZYr8lSRM0TDis\nr6qdfWW76Bw5HLlAu7O6y9m+8q3A6UlWD9VDSdLUDQyHqnp+juLj6RxR3L5A0xO7dR7sK98JrALe\nNGQfJUlTNvJspSQrgAuAr1bVLxaougbYM8fFgye6y6NG3bYkaToWM5X108CzwMfG3BdJ0n5i1SiV\nk5wPvB/406r6zYDqjwCr0049OqK7fHShxps3b37x/czMDDMzM6N0VZIOaLOzs8zOzk5s/QOnsr5Y\nMTkPuBh4Z1U9PET9S4ArgNdV1YM95VcBFwJHVtWeedo6lVWSRrAcU1lJ8kH6giHJGUk29dRZm6S3\nYzd3lzN9qzsVuG2+YJAkLb9h7pA+F7gOuJHOFNRzu2VnAkd362ygM7316n3tqurn3XafTHJUt975\nwDrgU+P9GpKkcRrmmsNVwKF0bnzrd1l3uRt4nE5A9PoocClwR5JngSeB06rqnsV1V5I0DUNfc5gm\nrzlI0miW5ZqDJOngYjhIkhqGgySpYThIkhqGgySpYThIkhqGgySpYThIkhqGgySpYThIkhqGgySp\nYThIkhqGgySpYThIkhqGgySpYThIkhqGgySpYThIkhqGgySpYThIkhqGgySpYThIkhqGgySpYThI\nkhqGgySpYThIkhqGgySpYThIkhqGgySpYThIkhpDh0OSo5N8N8neSXZIkrT8Vg1TKclZwJXAc0CN\nsoEkDwCP9RZ11/Hxqto6yrokSdMxVDgAFwPvAv4JeP2I29hbVW8esY0kaRkNGw4bq2pvkol2RpK0\nfxjqmkNVeZ1Bkg4i05itlCRbktyRZEeS25KcOYXtSpIWaRrh8BBwV1VtBE4AbgFuSXLRFLYtSVqE\nVA0/+SjJDcBfVtXKJW00+TbwdmBtVT07x+c1Sr8k6WCXhKoa24Xh5boJ7k7gcDpHEpKk/cyws5UW\nJclhwMqqeqrvoxe6y3mPQDZv3vzi+5mZGWZmZsbdPUn6rTU7O8vs7OzE1j/W00pJ1gIP7zsnlORD\nwNuq6m/66t0EvBtYU1V75liPp5UkaQTLfVpp3g0n2QDsAq7u++icJCf31DsbeC+wZa5gkCQtv2Ef\nn/F54DTg2O7Pd3c/ektVPd99vxt4nE5A7HMrcAxwTZJDgCPpPErjwqq6fundlyRNwkinlabF00qS\nNJrlPq0kSToIGA6SpIbhIElqGA6SpIbhIElqGA6SpIbhIElqGA6SpIbhIElqGA6SpIbhIElqGA6S\npIbhIElqGA6SpIbhIElqGA6SpIbhIElqGA6SpIbhIElqGA6SpIbhIElqGA6SpIbhIElqGA6SpIbh\nIElqGA6SpIbhIElqGA6SpIbhIElqGA6SpIbhIElqDB0OSY5O8t0keyfZIUnS8hsqHJKcBfwIWAfU\nKBtIsirJ5UnuS7ItyQ+TbFxEXyVJUzLskcPFwLuAOxaxjauBDwAbq2o9cAPwvSTrF7EuSdIUDBsO\nG6vqf0ddeZLjgE3AZ6vqMYCquh7YCXxm1PVJkqZjqHCoqsVeZziru5ztK98KnJ5k9SLXK0maoEnP\nVjoR2As82Fe+E1gFvGnC25ckLcKkw2ENsKeq+i9iP9FdHjXh7UuSFsH7HCRJjVUTXv8jwOok6Tt6\nOKK7fHS+hjnlwqbs0k1/zuYLz2zKN3/lW1z2L9+2vvWtb/2Dvv64TDoctgHnAMfy8usOrwOeB7bP\n23LXj196f/irOi9JEgAP/OweNm++a2LrH2s4JFkLPNxzlHAzcAUwA3ytp+qpwG1VtWfelb3qlHF2\nTZIOKK89/sSXHTlcdtllY11/2mvFC1RObgTOq6qVc3y2Abgd+EpVfaSn/Mt0wuHtVfVokvPp3Bj3\n1qq6Z57tzHENW5I0nyRUVca1vqGOHJJ8HjiNzukhktzd/egtVfV89/1u4HFgV1/zjwKXAnckeRZ4\nEjhtvmCQJC2/kY4cpsUjB0kazbiPHJzKKklqGA6SpIbhIElqGA6SpIbhIElqGA6SpIbhIElqGA6S\npIbhIElqGA6SpIbhIElqGA6SpIbhIElqGA6SpIbhIElqGA6SpIbhIElqGA6SpIbhIElqGA6SpIbh\nIElqGA6SpIbhIElqGA6SpIbhIElqGA6SpIbhIElqGA6SpIbhIElqGA6SpIbhIElqGA6SpMaqYSol\neQXwReAUoIB7gb+rql8N0fYB4LHeou46Pl5VW0ftsCRp8gaGQ5JDgO8DO4A3dotvAH6Q5I+qas+A\nVeytqjcvrZuSpGka5rTSXwF/CHyiuoBLgHXA306wb5KkZTJMOJwFPFhVv9xXUFUPAduB902qY5Kk\n5TNMOKwHds5RvhM4cYj2SbIlyR1JdiS5LcmZI/VSkjRVw4TDGuDJOcqfAFYnOXRA+4eAu6pqI3AC\ncAtwS5KLRuqpJGlqJj6VtareWlVf775/oaquAb4DXJHkdya9fUnS6IaZyvoIcPgc5UcAe6rqmUVs\n907gz+gcSfxkrgqbN29+8f3MzAwzMzOL2IwkHZhmZ2eZnZ2d2PrTmXy0QIXkVuD4qlrXV74N2F1V\nGxZoexiwsqqe6iv/R+By4I+r6sdztKtB/ZIkvSQJVZVxrW+Y00o3Aa9J8uqeTrySzj0P3+zr3Nok\nvZ07G7hyjnWeAjxDZ8aTJGk/M0w43AjcA2xJsjLJCuBzwP3AtfsqJdkA7AKu7mt/TpKTe+qdDbwX\n2DLEDXSSpGUw8JpDVT2X5DQ6j8/YDuyl8/iMd/T9ct8NPE4nIPa5FTgGuKZ7p/WRdB6lcWFVXT+e\nryBJGreB1xyWg9ccJGk0y3HNQZJ0kDEcJEkNw0GS1DAcJEkNw0GS1DAcJEkNw0GS1DAcJEkNw0GS\n1DAcJEkNw0GS1DAcJEkNw0GS1DAcJEkNw0GS1DAcJEkNw0GS1DAcJEkNw0GS1DAcJEkNw0GS1DAc\nJEkNw0GS1DAcJEkNw0GS1DAcJEkNw0GS1DAcJEkNw0GS1DAcJEkNw0GS1BgqHJK8Ism/JdmR5L4k\n30jyB0O2XZXk8m67bUl+mGTj0rotSZqkgeGQ5BDg+8AhwBuBNwFPAT9IsnqIbVwNfADYWFXrgRuA\n7yVZv+heS5ImKlW1cIVkE3AtsK6qftkteyXwK+CSqrpygbbHAfcBF1TVv/aU3wvsrKoz52lXg/ol\nSXpJEqoq41rfMKeVzgIe3BcMAFX1ELAdeN8QbQFm+8q3AqcPeeQhSZqyYcJhPbBzjvKdwIkD2p4I\n7AUenKPtKjqnqDRBs7Ozy92FA4r7c7zcn/uvYcJhDfDkHOVPAKuTHDqg7Z45zhE90V0eNcT2tQT+\n5Rsv9+d4uT/3X05llSQ1hgmHR4DD5yg/gs5RwTMD2q5O0n+R5Iju8tEhti9JmrJhZivdChxfVev6\nyrcBu6tqwwJtLwGuAF5XVQ/2lF8FXAgcWVV75mjnVCVJGtE4ZyutGqLOTcC1SV697xd8dyrrG4FL\neismWQs83HON4WY64TADfK2n6qnAbXMFA4z3C0qSRjfMaaUbgXuALUlWJlkBfA64n879DwAk2QDs\nonPTGwBV9XPgOuCTSY7q1jsfWAd8akzfQZI0ZgPDoaqeA04DXqBzb8P/AL8HvKPvX/67gcfpBESv\njwLfAO7onor6a+C0qrpn6d2XJE3CwGsO0sEgydF0Hu1yelU5i2+J3J+//ab2h+bD+8ZrifvzgSR3\n97x+0l2+Y9L93h8lOQv4EZ3TnSP9a8mx2Vri/nRs9khyUpLrkmxP8tMk9yb5UpI1Q7Rd2tisqom/\n6Dy076fAfwDpvm4Efg6sHqL9tcAO4Pe7P3+YzsP/1k+j//vbawz78/7l/g770wv4L+D1dP6l+8KI\nbR2b492fjs2X748ddE7LH9b9+Wg6z6vbARw6oO2Sxua0vuAmOtcsXtNT9krgeeAfBrQ9rtv2Q33l\n9wLfWu4/vGUaMIven926/gV8+f5Y0V2O9MvMsTne/dlt49h8+f7YTudWgN6yC7rj7i8WaLfksTmt\n00o+vG+8lrI/1aeq9i6yqWNzDkvYn2qtr6r+Z9vtonO24MgF2i15bE4rHHx433gtZX8CJMmWJHd0\nr1nclmTOx6drQY7N8XNs9qiq5+coPp7OuLt9gaZLHpvTCgcf3jdeS9mfAA8Bd1XVRuAE4BbgliQX\njbebBzzH5vg5NhfQvc/sAuCrVfWLBaoueWw6xewgVFVvraqvd9+/UFXXAN8BrkjyO8vbOx3MHJsD\nfRp4FvjYpDc0rXDw4X3jtZT9OZ87u+s8YSkdO8g4NqfDscmLT5d4P/DuqvrNgOpLHpvTCodtwGvn\nKH8dnUdzDGq7Ajh2jrbP07kIe7BZ9P5McliS353joxe6y5VL69pBxbE5Ro7N+SU5j87RwqlVNcw/\nOpY8NqcVDjcBr0ny6n0FPQ/v+2ZvxSRr+9Lu5u5ypm+dCz687wC3lP15NjDX//t9CvAM/kKbl2Nz\nvBybw0nyQeBi4J1V9XC37Iwkm3rqjH9sTmmu7iHAfwP/Tif9V9CZA/0zem7aAjbQSbV/7mv/ZTo3\nfhzV/fl8OjdznLjc85CX47WU/Ql8iM4zsE7uKTu7W+/S5f5uy7xfb2SeefmOzcnvT8fmnPvpXGAP\n8Pfd9/te1wKfnm9fdsuXNDaHeWT3klXVc0lOA75IJ/330rkZY5SH911K5+F9z9KZqXPQPrxvifvz\nVuAY4Jokh9CZK/0YcGFVXT+N/u9vknyezsMlj+3+fHf3o7fUS1MJHZtDWsL+dGy2rgIOBb4wx2eX\ndZcTGZs+eE+S1HAqqySpYThIkhqGgySpYThIkhqGgySpYThIkhqGgySpYThIkhqGgySpYThIkhr/\nD4lBqTrOTmj5AAAAAElFTkSuQmCC\n",
-      "text/plain": [
-       "<matplotlib.figure.Figure at 0x7f028c031588>"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    }
-   ],
-   "source": [
-    "linearconv(100)"
+    "linearconv(41)"
    ]
   },
   {
