--- a/Module 2 lesson 4.ipynb
+++ b/Module 2 lesson 4.ipynb
@@ -5490,32 +5490,34 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 175,
+   "execution_count": 178,
    "metadata": {
     "collapsed": false
    },
    "outputs": [
     {
-     "ename": "SyntaxError",
-     "evalue": "unexpected character after line continuation character (<unknown>, line 7)",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;36m  File \u001b[0;32m\"<unknown>\"\u001b[0;36m, line \u001b[0;32m7\u001b[0m\n\u001b[0;31m    u[i]= un [i]- un[i]*dt/dx*(un[i]-un[i-1])+nu*dt/dx**2*\\              (un[i+1]-2*un[i]+un[i-1])\u001b[0m\n\u001b[0m                                                                                                  ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m unexpected character after line continuation character\n"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "10 loops, best of 3: 34 ms per loop\n"
      ]
     }
    ],
    "source": [
     "%%timeit\n",
     "\n",
-    "u=numpy.asarray([u_lamb(t, x0, nu) for x0 in x])\n",
+    "u = numpy.asarray([u_lamb(t, x0, nu) for x0 in x])\n",
     "\n",
     "for n in range(nt):\n",
     "    un = u.copy()\n",
-    "    for i in range (nx-1):\n",
-    "        u[i]= un [i]- un[i]*dt/dx*(un[i]-un[i-1])+nu*dt/dx**2*\\              (un[i+1]-2*un[i]+un[i-1])\n",
-    "            \n",
-    "    u[-1]= un[-1]-un[-1]*dt/dx*(un[-1]-un[-2])+nu*dt/dx**2*\\\n",
-    "           (un[0]-2*un[-1]+un[-2])"
+    "    \n",
+    "    for i in range(nx-1):\n",
+    "        u[i] = un[i] - un[i] * dt/dx *(un[i] - un[i-1]) + nu*dt/dx**2*\\\n",
+    "                (un[i+1]-2*un[i]+un[i-1])\n",
+    "    \n",
+    "    u[-1] = un[-1] - un[-1] * dt/dx * (un[-1] - un[-2]) + nu*dt/dx**2*\\\n",
+    "                (un[0]- 2*un[-1] + un[-2])\n",
+    "    "
    ]
   },
   {
