--- a/Homework Assignment Module 2.ipynb
+++ b/Homework Assignment Module 2.ipynb
@@ -255,39 +255,39 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 55,
    "metadata": {
     "collapsed": false
    },
    "outputs": [],
    "source": [
-    "x = sympy.symbols('p')"
+    "p = sympy.symbols('p')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 56,
    "metadata": {
     "collapsed": false
    },
    "outputs": [
     {
      "data": {
-      "image/png": "iVBORw0KGgoAAAANSUhEUgAAAAsAAAAJBAMAAAAWSsseAAAAKlBMVEX///8AAAAAAAAAAAAAAAAA\nAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAADmU0mKAAAADXRSTlMAEHarIkSJZt3NVLsyNZ302gAA\nAAlwSFlzAAAOxAAADsQBlSsOGwAAAEJJREFUCB1jYBBSdlVTYGBMYG/imMDAJsB2kcuBgZGBcwMD\nCPAqgKmzBxgEGLgEdBmYBBhiF+xlcGdgEFYSSi9gAAAZ4Ql2LUcmxgAAAABJRU5ErkJggg==\n",
+      "image/png": "iVBORw0KGgoAAAANSUhEUgAAAAwAAAANBAMAAABvB5JxAAAAMFBMVEX///8AAAAAAAAAAAAAAAAA\nAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAv3aB7AAAAD3RSTlMARIm7IjJ2qxDdVM1m\n75kH/PNjAAAACXBIWXMAAA7EAAAOxAGVKw4bAAAAV0lEQVQIHWNgEDIJS29gYFCoXMBkwMCyYDsD\nzwcGDoZfDEw/GBgYfzAwX2BgYJrA0P+AgYH7AcNZoEp+A9arDAwM8kJ5DkBKE4iBYB+Y5PgFplb+\nTgDSAMGZEyw0E8W5AAAAAElFTkSuQmCC\n",
       "text/latex": [
-       "$$x$$"
+       "$$p$$"
       ],
       "text/plain": [
-       "x"
+       "p"
       ]
      },
-     "execution_count": 49,
+     "execution_count": 56,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "x"
+    "p"
    ]
   },
   {
