--- a/Homework Assignment Module 2.ipynb
+++ b/Homework Assignment Module 2.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 12,
    "metadata": {
     "collapsed": true
    },
@@ -52,7 +52,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 13,
    "metadata": {
     "collapsed": false
    },
@@ -69,7 +69,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 14,
    "metadata": {
     "collapsed": true
    },
@@ -81,7 +81,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 15,
    "metadata": {
     "collapsed": false
    },
@@ -92,7 +92,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 16,
    "metadata": {
     "collapsed": false
    },
@@ -107,7 +107,7 @@
        "x"
       ]
      },
-     "execution_count": 36,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -118,7 +118,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 17,
    "metadata": {
     "collapsed": false
    },
@@ -137,7 +137,7 @@
        "        4⋅x        "
       ]
      },
-     "execution_count": 37,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -149,7 +149,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 18,
    "metadata": {
     "collapsed": false
    },
@@ -174,7 +174,7 @@
        "4⋅x         "
       ]
      },
-     "execution_count": 38,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -186,7 +186,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 19,
    "metadata": {
     "collapsed": false
    },
@@ -207,7 +207,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 20,
    "metadata": {
     "collapsed": false,
     "scrolled": true
@@ -235,7 +235,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 21,
    "metadata": {
     "collapsed": true
    },
@@ -255,39 +255,71 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 23,
    "metadata": {
     "collapsed": false
    },
    "outputs": [],
    "source": [
-    "p = sympy.symbols('p')"
+    "p, Pmax, Vmax = sympy.symbols('p Pmax Vmax')\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 28,
    "metadata": {
     "collapsed": false
    },
    "outputs": [
     {
      "data": {
-      "image/png": "iVBORw0KGgoAAAANSUhEUgAAAAwAAAANBAMAAABvB5JxAAAAMFBMVEX///8AAAAAAAAAAAAAAAAA\nAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAv3aB7AAAAD3RSTlMARIm7IjJ2qxDdVM1m\n75kH/PNjAAAACXBIWXMAAA7EAAAOxAGVKw4bAAAAV0lEQVQIHWNgEDIJS29gYFCoXMBkwMCyYDsD\nzwcGDoZfDEw/GBgYfzAwX2BgYJrA0P+AgYH7AcNZoEp+A9arDAwM8kJ5DkBKE4iBYB+Y5PgFplb+\nTgDSAMGZEyw0E8W5AAAAAElFTkSuQmCC\n",
+      "image/png": "iVBORw0KGgoAAAANSUhEUgAAAL8AAAAmBAMAAABnrVe+AAAAMFBMVEX///8AAAAAAAAAAAAAAAAA\nAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAv3aB7AAAAD3RSTlMAdt3NVDLvmRCrIolE\nZrtDPvbtAAAACXBIWXMAAA7EAAAOxAGVKw4bAAADZklEQVRIDaVWS2gTURQ9+TVjMpmkSrHFQoMf\nsBQhC6W4scGFiJtGcZ92oQhFrLpyNyAIojCtLkQL7SAi6CZTwd+qdeOmiwbFrpRGXEhFMNqqpdbW\n+2YySeblvTSJFyZ559xz33szc+fMAA1GLN+gsCK7Xhk2MNqxlWbuy8ku3SNSUx5YH6jn6ucB61Y6\nWvCKurywLrqWqZsGIunDiBW9okATl/WOt7QWKVhBdNXLRzjszXpQaGupugptyFME3OWwHAZG5blS\nJpqEwauy+pZlJUHO3FJJe1jQOVUgwRFSeEmaKSfihdCZMigNYkM8I8PDskSFn5/baVaQM4qsA9s3\nDwKnfvFXzyuN/LRxQPfSHvTEg0pgBFCWaRwcE2UrnNPgkW96haoZ9dcwRNym4ywd20TJKi6cJKB8\nntKrOG6orHCEDXvod4CODlGyivMXbNCjV3Hc8OiyqGMGTWDKRMTi1DyMO7eo3gJ8iYOzaWBmFmFC\n6svH7ePq9FdylYmO/VDa772ahuuQcWd3zS9g5IHFBN7RAlHtI4xuHANem1oRN/AmsafskExH0fwC\nbGfzo/YVOu1PIWdhEcp5hAt4gRn9RNkhcy0vYAFGwe4h3ZjFoI5JhFfhT0DHEeob1yHZpaRwzuDq\nbhaHGLFZL5iA3bx48j0bYhAgQxhGWwFGhvB3OlyHzLZ8BrSAf41+KC4DfVDXFMOitXSEftIJuA75\nX5dI29DtBUagrCOcemCk8SloHvcV0QnXIY2ELWnhJtOph8mQKMiXyBAClhVIxHqj6opWjOThOmTc\nanGBXBqIjdnFahK+MQQnMsr400fdynjnrg/UYSWHbLM1Vy700oaaiuxsfbnrkFpKpuvaXJrs12VZ\n1pd1w3XI6JBURmasyT9pnknr7ETZIYPSd37oD5k962hxLIlply07pPLXpfh/H7WI7zfPlrG0rqwo\nDaQ70Yr0NhG+ClhlaI2fSIYXZIk43f7cqNCKqSQqbQ5+Pnr6xJG1oPaJrZgK2vLiqlrWJ9tKz8Tz\niyZEVswmIfNvNGo+eUqFzneAyIqZ4ECj0wNvJdIfDi+yYjIJ2XkLJtMSApLapNShIisGHprCIiGp\n7BPS7DFgIbJiKHudZGO/902RLuA84kIrhtZwD7GpIxnBAuGBDfvSCa0YN1nFP4YuFCQXUUxuAAAA\nAElFTkSuQmCC\n",
       "text/latex": [
-       "$$p$$"
+       "$$Vmax p \\left(1 - \\frac{p}{Pmax}\\right)$$"
       ],
       "text/plain": [
-       "p"
+       "       ⎛     p  ⎞\n",
+       "Vmax⋅p⋅⎜1 - ────⎟\n",
+       "       ⎝    Pmax⎠"
       ]
      },
-     "execution_count": 56,
+     "execution_count": 28,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "p"
+    "F = Vmax*p*(1-p/Pmax)\n",
+    "F"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 29,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "image/png": "iVBORw0KGgoAAAANSUhEUgAAARgAAAAqBAMAAACaZVmtAAAAMFBMVEX///8AAAAAAAAAAAAAAAAA\nAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAv3aB7AAAAD3RSTlMAdt3NVDLvmRCrIolE\nZrtDPvbtAAAACXBIWXMAAA7EAAAOxAGVKw4bAAAEoUlEQVRYCb1YTWwbVRD+7NjxZv23AVU0pCIp\nERKIi0FIgBDU4oBKLzEVJy4OB1BVVGSRA3CBLYeKCgk7HEC0ghjEpQjwBlQJhFBNkbjkEKuInqji\nqhISCIhLUxqS0DDvbZzs2519/jn4Sd6d+Wbmm9m3b3f2GRjYuGXrAeDwP6WBJdQlMq6RNVbRuQzQ\n9jzlGhlgPm2qA2Tdo/XowphudOGkuBjszZivwnQUvz6UWzvFLP7+1JitOP2gaNvKuToSJKa++XR0\nLrXwB2Ce3nM3jNFT3y8gSMExUPARHt9FnXfyyeauSlKEm5plCz+TLZm5jPI+PAH8WM208BYuWFMI\nUih8O8qJwo7IC2b+YaRbqu1RVZXaUknepaejOdQcLMM4hkQTX+OcfYijYBiA91jUAxpYRXLNA5BY\ns1VdaOWmfJbsch3TNj5EYg1RCzYeAziKIAEQ96VhfFJryMyo+Ahzn7KTv0inaeAl4FkMN1EWs36V\nfgyFSuhqQyUOVbDkJMo+L+4Souuu0yxwL1LrRtnBNE1M/DpNDEOhpNhWalUOVTCq96KtIMB9Pp3U\nzE3X6QUYm0jkPinncSVWPRhpYS84iiCDmNFOI9uMP+f3uegHgMSmxMxNsdyHHGfISt+TTK1mWmYD\nHEWQge5tx7G0eFvV71Sr+xGkKxJKTYonP3a6YMydPbPPmNs7fglwKTr1UvO6ZHgoQO0BvvTIbXHY\naUtdnV2KTr3UfYF8oX2kHmTyjeQYMBzapujQSxOTxPD2q7pijFUmCS3LHkabokMvjTYFZ0RXzOPX\nrGDe2HoQC0faFB16abYkKLTFsDni3HSxnl5Q10vJLyuvuvdijP+8SbqVdb2UOMoNQdR7MfIl320N\nO36aXip8av0Ws7GToQdB00sFSzEvju7MGPffSWOqQEB2SzNaIuSGOHQb4ZIRraaXEl2x35mRxYiC\nehm6Xko8g71Nul5KxZQtcWV9LOC+niZdL6Uysk5/xZh9vWd0vZTqGK7QIfHu3x+ImnoYcfd7oYeI\nLlwzuRCnyPzN96+8EmKkfSzbQDoEhbJtG5IzYR5ZKvNXO8waEqcPCiNr4/wVCmuRVtO01fbznzMV\nPyJ1fRAb4gHDe8xEHZgoeVwVMdtQ1LaiD2p7hZ5/C7OskGE+H2YtVlmLPogN8YLMl7Vrpr9bzBtY\nPPXRmLV4Rx04s3DYxvGxz8blrfvKy7Er64N2/UIk2lCwI06d8LwD5y/LuFqPzSB1FCswnPR+2r3S\nONZPEBvjBSOS24u4cuTfb1++HfH8FMwNsfc40cBrSNrJtViVHKg6buiDuAgfFtgSufaMfJEYtB+j\nB26kiddt7Ket4VBTmqP8+tUH+RJz6k8cKLq9xGMt0Df7sIUXYYhdjftliL6C+EQKmpELUoGEUixJ\nKJFD1MFS9c0NxFoGwQXaPsM8Ko2BgzYo4M0Axl0MSK+YuoRps0Z/ccyaB1eRyR2K2ROI2MAbeWkM\nHLRBAW8O+LjKoQdsidI2dhl4JEk7/QsVZym/gs8J/5OLIEwbFBKjwmZB1aU2u3VZns8DY8CTZ3Fy\n/Jm5+snR49/R0jXqTARB2iDgf4H81fwzTQxWAAAAAElFTkSuQmCC\n",
+      "text/latex": [
+       "$$Vmax \\left(1 - \\frac{p}{Pmax}\\right) - \\frac{Vmax p}{Pmax}$$"
+      ],
+      "text/plain": [
+       "     ⎛     p  ⎞   Vmax⋅p\n",
+       "Vmax⋅⎜1 - ────⎟ - ──────\n",
+       "     ⎝    Pmax⎠    Pmax "
+      ]
+     },
+     "execution_count": 29,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "dF=F.diff(p)\n",
+    "dF"
    ]
   },
   {
@@ -297,7 +329,28 @@
     "collapsed": true
    },
    "outputs": [],
-   "source": []
+   "source": [
+    "x = numpy.linspace(0, L, nx)\n",
+    "rho0 = numpy.ones(nx)*10\n",
+    "rho0[10:20] = 50"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "#set initial parameters\n",
+    "Vmax = 80     #km/hr\n",
+    "L = 11        #km\n",
+    "pmax = 250    #cars/km\n",
+    "nx = 51\n",
+    "def F(p):\n",
+    "    "
+   ]
   }
  ],
  "metadata": {
